--- a/NewFPS/ReadMe
+++ b/NewFPS/ReadMe
@@ -1,3 +1,6 @@
 This is "NewFPS", my revolutionary fpsgame.
 
 Only the C# files will be uploaded since I will upload full version of game on Youtube and on public someday.
+
+Chracters:
+Magnet: Skills can controll the bullet (projectiles), a gamechanger.
